--- a/frappe/www/app.html
+++ b/frappe/www/app.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<!-- Chrome, Firefox OS and Opera -->
-		<meta name="theme-color" content="#0089FF">
+		<meta name="theme-color" content="#133c55">
 		<!-- Windows Phone -->
-		<meta name="msapplication-navbutton-color" content="#0089FF">
+		<meta name="msapplication-navbutton-color" content="#133c55">
 		<!-- iOS Safari -->
-		<meta name="apple-mobile-web-app-status-bar-style" content="#0089FF">
+		<meta name="apple-mobile-web-app-status-bar-style" content="#133c55">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<meta name="author" content="">
@@ -17,6 +17,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="white">
 		<meta name="mobile-web-app-capable" content="yes">
 		<title>{{ app_name }}</title>
+		<link rel="manifest" href="/assets/frappe/manifest.webmanifest" />
 		<link rel="shortcut icon"
 			href="{{ favicon or "/assets/frappe/images/frappe-favicon.svg" }}" type="image/x-icon">
 		<link rel="icon"
