add: Branding & Support for Mobile App Incoming

--- a/frappe/www/error.html
+++ b/frappe/www/error.html
@@ -27,7 +27,7 @@
 	</div>
 	<p>{{ error_message }}</p>
 	<div>
-		<a href="/" class="btn btn-primary btn-sm">{{ _("Home") }}</a>
+		<a href="/" class="btn btn-primary btn-sm"><img src="/assets/sovisindia/images/SI-PLANE-BRANDING-DARK.svg"></a>
 	</div>
 </div>
 <p class="text-muted text-center small" style="margin-top: -20px;">
