--- a/frappe/www/login.html
+++ b/frappe/www/login.html
@@ -54,11 +54,11 @@
 
 {% macro logo_section(title=null) %}
 <div class="page-card-head">
-	<img class="app-logo" src="{{ logo }}">
+	<img class="app-logo" src="/assets/sovisindia/images/SI-PLANE-DARK.svg">
 	{% if title %}
 	<h4>{{ _(title)}}</h4>
 	{% else %}
-	<h4>{{ _('Login to {0}').format(app_name or _("Frappe")) }}</h4>
+	<h4>{{ _('Login to {0}').format(_("Sovis India")) }}</h4>
 	{% endif %}
 </div>
 {% endmacro %}
@@ -147,7 +147,7 @@
 			<div class='page-card-head mb-2'>
 				<span class='indicator gray'>{{_("Signup Disabled")}}</span>
 				<p class="text-muted text-normal sign-up-message mt-1 mb-8">{{_("Signups have been disabled for this website.")}}</p>
-				<div><a href='/' class='btn btn-primary btn-md'>{{ _("Home") }}</a></div>
+				<div><a href='/' class='btn btn-primary btn-md'><img src="/assets/sovisindia/images/SI-PLANE-BRANDING-DARK.svg"></a></div>
 			</div>
 			{%- endif -%}
 		</div>
