--- a/frappe/www/login.html
+++ b/frappe/www/login.html
@@ -58,7 +58,7 @@
 	{% if title %}
 	<h4>{{ _(title)}}</h4>
 	{% else %}
-	<h4>{{ _('Login to {0}').format(_("Sovis India")) }}</h4>
+	<h4>{{ _('Login to {0}').format(_("Sovis ERP")) }}</h4>
 	{% endif %}
 </div>
 {% endmacro %}
