fix: Quick Menu showing space when disabled

--- a/frappe/public/js/frappe/ui/toolbar/navbar.html
+++ b/frappe/public/js/frappe/ui/toolbar/navbar.html
@@ -138,8 +138,7 @@
 			</div>
 		</div>
 
-		<ul class="container si-nav-menu-main flex overflow-x-auto">
-		</ul>
+		<ul class="container si-nav-menu-main flex overflow-x-auto"></ul>
 	</header>
 
 	{% if !localStorage.getItem("dismissed_announcement_widget") && strip_html(navbar_settings.announcement_widget) != '' %}
